Last min save fixed the spacing for the images.

--- a/list.css
+++ b/list.css
@@ -14,7 +14,6 @@ main .pantry{
     display: flex;
 }
 main .canned{
-    display: flex;
     background-color: grey;
     padding: 0px 10px;
     margin: 10px 20px 10px 0px;
